--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Ola, esse é meu código HTML.</h1>
-    <button>Novo Botão</button>
+    <h4 style="color:brown;">Macaquinho 🙉🙈🙊</h4>
+    <button>botão</button>
+    
+    <img src="imagem.jpg" width="420px" height="360px"/>
+
 </body>
 </html>
